<resources>
    <string name="app_name">Voice</string>
    <string name="tapToViewList">Tap to view the list</string>
    <string name="noInternet">No Internet…</string>
    <string name="slowInternet">Slow Internet…</string>
    <string name="tapToViewMap">Swipe down to view the map</string>
    <string name="action_km">Kilometers</string>
    <string name="action_mts">Meters</string>
    <string name="kilometer">km</string>
    <string name="meter">m</string>
    <string name="noLocationAlarmsAreSet">No Location Alarms Are Set …</string>
    <string name="action_ft">Feet</string>
    <string name="action_mls">Miles</string>
    <string name="miles">mi</string>
    <string name="feet">ft</string>
    <string name="no_network_access">Please Check Your Internet Connectivity &amp; Try Again!</string>
    <string name="internet_failure">No Internet!</string>
    <string name="ad_unit_id">ca-app-pub-9949935976977846/7987489212</string>
    <string name="listAdSize">320x150</string>
    <string name="bannerAdSize">320x80</string>
    <string name="alarmAddress">Alarm Address</string>
    <string name="range">Range</string>
    <string name="deleteAlarm">Delete Alarm</string>
    <string name="turnOnAlarm">Turn on or turn off alarm</string>
    <string name="test_admob_unit_id">ca-app-pub-3940256099942544/3986624511</string>
    <string name="test_admob_express_unit_id">ca-app-pub-3940256099942544/1072772517</string>
    <string name="travel_mode_off_helptext">Long Press to turn Travel Mode : Off</string>
    <string name="travel_mode_on_helptext">Long Press to turn Travel Mode : On</string>
    <string name="travel_mode_on">Travel Mode : On</string>
    <string name="travel_mode_off">Travel Mode : Off</string>
    <string name="signing_in">Signing in…</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="please_try_again">Please Try again!</string>
    <string name="issue_title_hint">Describe in brief!</string>
    <string name="addIssue">Add Issue</string>
    <string name="post">POST</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="placeName">Place Name</string>
    <string name="select_issue_type">Select Issue Type</string>
    <string name="anonymous_confirmation">Post This Issue Anonymously?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_crop_image">CropImageActivity</string>
    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="anonymous">Anonymous</string>
    <string name="action_report">Report Spam</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="issueDescription">Issue Description</string>
    <string name="settings">Settings</string>
    <string name="mapType">Map Type</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="logout">Logout</string>
    <string name="hintMessages">Hint messages</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="pleaseUploadImage">Please Upload Image</string>
    <string name="pleaseEnterAddress">Please enter the address with \"@\" prefix</string>
    <string name="pleaseEnterIssueType">Please enter the issue type with \"#\" prefix</string>
    <string name="issuePosted">Issue Posted</string>
    <string name="clickNotificationToOpen">Click on notification to open it</string>
    <string name="postingIssueFailed">Posting Issue Failed</string>
    <string name="clickOnRetryToPostAgain">Click on retry to post again</string>
    <string name="image_permission_denial">Image can\'t be added without this Permission</string>
    <string name="sharedElement1">sharedElement1</string>
    <string name="sharedElement2">sharedElement2</string>
    <string name="suggestNgo">SUGGEST AN NGO</string>
    <string name="suggestSolution">Suggest a solution</string>
    <string name="volunteer">Volunteer</string>
    <string name="or">Or</string>
    <string name="ngo_name">NGO Name</string>
    <string name="address">Address</string>
    <string name="emailId">Email ID</string>
    <string name="phoneNo">Phone No.</string>
    <string name="save">Save</string>
    <string name="website_url">Website URL</string>
    <string name="reported">Reported</string>
    <string name="deleted">Deleted…</string>
    <string name="couldntDelete">Couldn\'t Delete</string>
    <string name="saved">Saved</string>
    <string name="posted">Posted</string>
    <string name="sampleComment">This is a sample comment to test the layout</string>
    <string name="sampleLink">http://sample.link.com</string>
    <string name="commentCannotBeEmpty">Comment Cannot Be Empty</string>
    <string name="ngoNameCannotBeEmpty">NGO name cannot be empty</string>
    <string name="comment">Comment</string>
    <string name="pleaseEnterTheComment">Please Enter The Comment</string>
    <string name="pleaseEnterNgoName">Please Enter NGO Name</string>
    <string name="pleaseEnterNgoUrl">Please Enter A Valid Website URL</string>
    <string name="loading">Loading</string>
    <string name="commentColon">Comment :</string>
    <string name="posting">Posting...</string>
    <string name="sorryImageFormatNotSupported">Sorry! Image Format Not Supported</string>
    <string name="areYouSureYouWantToDeleteThisPost">Are you sure you want to delete this post?</string>
    <string name="noIssuesFound">No Issues Found...</string>
    <string-array name="issue_types">
        <item>#Humanity</item>
        <item>#AnimalCare</item>
        <item>#Environmental</item>
        <item>#TrafficSaftey</item>
    </string-array>
</resources>
