<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/mapTypeDisplay"
              android:orientation="vertical">
    <LinearLayout
        android:background="@drawable/bg_drawable"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mapType"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mapTypeValue"
                android:text="@string/normal"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:background="#ccc"
            android:layout_height="0.5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mapTypeExpandList"
        android:visibility="gone"
        android:orientation="vertical">

        <LinearLayout
            android:background="@drawable/bg_drawable"
            android:layout_width="match_parent"
            android:id="@+id/normal"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/normal"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="#ccc"
            android:layout_height="0.5dp"/>
        <LinearLayout
            android:background="@drawable/bg_drawable"
            android:layout_width="match_parent"
            android:id="@+id/satellite"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/satellite"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="#ccc"
            android:layout_height="0.5dp"/>
        <LinearLayout
            android:background="@drawable/bg_drawable"
            android:layout_width="match_parent"
            android:id="@+id/terrain"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/terrain"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:background="#ccc"
            android:layout_height="0.5dp"/>
        <LinearLayout
            android:background="@drawable/bg_drawable"
            android:layout_width="match_parent"
            android:id="@+id/hybrid"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hybrid"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:background="#ccc"
            android:layout_height="0.5dp"/>
    </LinearLayout>
</LinearLayout>