<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_weight="10"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/issueHeader"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            >

            <ImageView
                android:id="@+id/profilePic"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/user_icon_accent"
                />

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/optionsIconContainer"
                android:layout_toEndOf="@+id/profilePic"
                android:gravity="center_vertical"
                android:minHeight="70dp"
                android:text="@string/anonymous"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                />

            <RelativeLayout
                android:id="@+id/optionsIconContainer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:clickable="true"
                >

                <TextView
                    android:id="@+id/postIssueTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:background="@drawable/post_issue_bg"
                    android:text="@string/post"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/button_color"/>

            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/issueDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/issue_title_hint"
                android:inputType="textMultiLine"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:scrollHorizontally="false"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:id="@+id/issueImageContainer"
                android:background="#fff"
                android:transitionName="@string/sharedElement1"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:layout_width="@dimen/loading"
                    android:layout_centerInParent="true"
                    android:layout_height="@dimen/loading"
                    />

                <co.thnki.whistleblower.view.SquareImageView
                    android:id="@+id/issueImage"
                    android:background="#eee"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/default_img"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/editPlaceContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                >

                <EditText
                    android:id="@+id/areaTypeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/placeName"
                    android:paddingBottom="20dp"
                    android:paddingEnd="50dp"
                    android:paddingStart="10dp"
                    android:paddingTop="20dp"
                    />

                <ImageView
                    android:id="@+id/editIcon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="20dp"
                    android:src="@mipmap/edit_primary_dark"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/postIssue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:gravity="center"
                android:background="@drawable/post_issue_bg"
                android:text="@string/post"
                android:textColor="@color/button_color"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>